--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <li>2019年10月 YOK Travelを退社</li>
             <li>2019年11月 フィジーにて語学留学開始</li>
             <li>2020年1月 株式会社DogHuggyにてインターンを開始</li>
+            <li>2020年5月 株式会社DogHuggyを退社</li>
         </ul>
     </div>
     <div>
