--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h4>業務</h4>
         <ul>
             <li>バックエンド:PHP Laravel (Scala Play)</li>
-            <li>フロントエンド:HTML CSS JavaScript JQuery</li>
+            <li>フロントエンド:HTML CSS JavaScript JQuery Vue.js</li>
             <li>インフラ等:GAE MySQL PostgreSQL SQLServer</li>
         </ul>
         <h4>個人開発</h4>
