経歴を更新した

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <li>2019年10月 YOK Travelを退社</li>
             <li>2019年11月 フィジーにて語学留学開始</li>
             <li>2020年1月 株式会社DogHuggyにてインターンを開始</li>
-            <li>2020年5月 株式会社DogHuggyを退社</li>
+            <li>2020年6月 株式会社DogHuggyを休職</li>
+            <li>2020年9月 株式会社DogHuggyにてインターンを再開</li>
         </ul>
     </div>
     <div>
